# roverd

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  devbox.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: .bashrc  ssh_config
.github/workflows/: build-and-upload.yaml  release.yml  test.yml
docs/: .$StateMachine.drawio.bkp  01-overview.md  02-conventions.md  03-containerization.md  03-conventions.md  04-improvements.md  StateMachine.drawio
roverd/: .gitignore  Cargo.toml  Makefile
roverd/example-pipelines/circular/actuator/: service.yaml
roverd/example-pipelines/normal/controller/: service.yaml
roverd/example-pipelines/normal/imaging/: Makefile  service.yaml
roverd/example-pipelines/normal/transceiver/: service.yaml
roverd/examples/: actuator-service.yaml  imaging-service.yaml
roverd/examples/circular_pipeline/controller/: service.yaml
roverd/examples/circular_pipeline/imaging/: service.yaml
roverd/openapi/: Cargo.toml  README.md
roverd/openapi/.openapi-generator/: FILES
roverd/openapi/src/: models.rs  types.rs
roverd/openapi/src/apis/: health.rs  mod.rs  pipeline.rs  services.rs  sources.rs
roverd/openapi/src/server/: mod.rs
roverd/spec/: README.md  apispec.yaml  bootspec.example.json  bootspec.json
roverd/src/: build.rs  command.rs  constants.rs  error.rs  log.rs  main.rs  test.rs
roverd/src/apis/: health.rs  mod.rs  pipeline.rs  services.rs  sources.rs
roverd/src/app/: bootspec.rs  daemons.rs  info.rs  mod.rs  state.rs
roverd/src/state/: bootspec.rs  config.rs  daemons.rs  health.rs  info.rs  mod.rs  pipeline.rs  process.rs  service.rs  services.rs  sources.rs
roverd/src/state/apis/: health.rs  pipeline.rs  services.rs  sources.rs
roverd/src/state/pipeline/: mod.rs  process.rs
roverd/src/state/process/: mod.rs
roverd/src/state/rover/: mod.rs  process.rs
roverd/src/state/runtime/: config.rs  mod.rs  pipeline.rs  services.rs
roverd/src/util/: mod.rs
rovervalidate/: .gitignore  Cargo.toml  Makefile  README.md  devbox.json
rovervalidate/spec/: README.md  roverd.example.yaml  roverd.json  roverd.yaml  (+3 more)
scripts/: fetch_latest.sh  latest_changelog.sh  make_zips.sh  setup_rover_files.sh  update_cargo_version.sh  zip_upload.sh
spec/: README.md  apispec.yaml  bootspec.example.json  bootspec.json  spec.yaml
src/: error.rs  log.rs  main.rs
(+43 files in other folders)
