[package]
name = "roverd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"
openapi = { path = "./openapi", features = ["server"]}
tokio = {version = "1.41.0", features = ["full"]}
tower-http = {version = "0.6.1", features = ["cors"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
