[package]
name = "roverd"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
build = "src/build.rs"

[dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"
base64 = "0.22.1"
openapi = { path = "./openapi", features = ["server"] }
os_info = "3.5.1"
pgs-files = "0.0.7"
sha256 = "1.5.0"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rovervalidate = { version = "0.1.0", path = "../rovervalidate" }
serde_yaml = "0.9.34"
reqwest = "0.12.9"
zip = "0.6.6"
derive_more = "0.99.18"
libc = "0.2.167"
futures = "0.3.31"
chrono = "0.4.38"
serde_json = "1.0.133"
serde = "1.0.216"
schemars = "0.8.21"

